--- a/views/service_prov.xml
+++ b/views/service_prov.xml
@@ -37,6 +37,22 @@
         </field>
     </record>
 
+    <record model="ir.ui.view" id="serv_prov_search_view">
+        <field name="name">service.provider.detail.search</field>
+        <field name="model">service.provider.detail</field>
+        <field name="arch" type="xml">
+            <!-- search -->
+            <search>
+                <field name="provnm"/>
+                <field name="specialist"/>
+                <field name="proddprice"/>
+            </search>
+        </field>
+        <!-- filter domain search -->
+        <!-- <field name="description" string="Specialist and Price"
+           filter_domain="['|', ('specialist', 'ilike', self), ('proddprice', 'ilike', self)]"/> -->
+    </record>
+
     <record id="serv_prov_action_click" model="ir.actions.act_window">
         <field name="name">Service Provider</field>
         <field name="res_model">service.provider.detail</field>
