--- a/views/product.xml
+++ b/views/product.xml
@@ -9,9 +9,9 @@
                 <field name="prodnm" />
                 <field name="prodtype" />
                 <field name="prodprice"/>
-                  <field name="product_start_date"/>
-                 <field name="product_end_date"/>
-                 <field name="total_day"/>
+                <field name="product_start_date"/>
+                <field name="product_end_date"/>
+                <field name="total_day"/>
             </tree>
         </field>
     </record>
@@ -67,12 +67,60 @@
         </field>
     </record>
 
+    <!-- kanban view -->
+    <record model="ir.ui.view" id="product_kanban_view">
+        <field name="name">product.data.product.kanban</field>
+        <field name="model">product.data.product</field>
+        <field name="arch" type="xml">
+            <kanban default_group_by='state'>
+                <field name="prodnm" />
+                <field name="prodtype" />
+                <field name="prodprice"/>
+                <field name="product_start_date"/>
+                <field name="product_end_date"/>
+                <field name="total_day"/>
+                <templates>
+                    <t t-name="kanban-box">
+                        <div t-attf-class="
+                            oe_kanban_global_click_edit oe_semantic_html_override">
+                            <div class="oe_dropdown_kanban">
+                                <!-- dropdown menu -->
+                                <div class="oe_dropdown_toggle">
+                                    <i class="fa fa-bars fa-lg" title="Manage" aria-label="Manage"/>
+                                    <ul class="oe_dropdown_menu">
+                                        <li>
+                                            <a type="delete">Delete</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                                <div class="oe_clear"></div>
+                            </div>
+                            <div t-attf-class="oe_kanban_content">
+                                <!-- title -->
+                                Product name:
+                                <field name="prodnm"/>
+                                <br/>
+                                Start date:
+                                <field name="product_start_date"/>
+                                <br/>
+                                End date:
+                                <field name="product_end_date"/>
+                                <br/>                                
+                                Price:
+                                <field name="prodprice"/>
+                            </div>
+                        </div>
+                    </t>
+                </templates>
+            </kanban>
+        </field>
+    </record>
+
     <record id="product_action_click" model="ir.actions.act_window">
         <field name="name">Product</field>
         <field name="res_model">product.data.product</field>
-        <field name="view_mode">tree,form,graph,calendar</field>
+        <field name="view_mode">tree,form,graph,calendar,kanban</field>
     </record>
 
     <menuitem id="product_menu_view" name="Product" parent='lb_app' action="product_action_click" />
-
 </odoo>
