--- a/views/templates.xml
+++ b/views/templates.xml
@@ -3,13 +3,68 @@
 <odoo>
     <template id="index">
         <t t-call="website.layout">
-            <t t-set="title">Lb</t>
-            <div class="oe_structure">
-                <div class="container">
-                    <t t-foreach="data" t-as="data">
-                        <p><t t-esc="teacher.id"/> <t t-esc="teacher.name"/></p>
+            <center>
+                <h2><u>Customer</u></h2>
+            </center>
+            <br/>
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Address</th>
+                        <th>Contact</th>
+                        <th>Email</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <t t-foreach="data" t-as="d">
+                        <tr class="">
+                            <td>
+                                <t t-esc="d.name" />
+                            </td>
+                            <td>
+                                <t t-esc="d.address" />
+                            </td>
+                            <td>
+                                <t t-esc="d.contact" />
+                            </td>
+                            <td>
+                                <t t-esc="d.email" />
+                            </td>
+                            <td>
+                                <a class="btn btn-primary" t-attf-href="/edit/{{slug(d)}}" role="button"><i class="fa fa-pencil-square-o"></i></a>
+                                <a class="btn btn-primary" t-attf-href="/drop/{{slug(d)}}" role="button"><i class="fa fa-trash"></i></a>
+                            </td>
+                        </tr>
                     </t>
-                </div>
-            </div>
+                </tbody>
+            </table>
+            <a class="btn btn-primary" t-attf-href="/insert/" role="button">Create</a>
         </t>
     </template>
+
+    <template id="insert">
+        <t t-call="website.layout">
+            <form t-attf-action="/form/#{slug(d) if d else ''}" method="post">
+                <div class="form-group">
+                    <label>Customer Name</label>
+                    <input type="text" t-attf-value="#{d.name if d else ''}" class="form-control" id="name" name="name" placeholder="Enter Customer Name" />
+                </div>
+                <div class="form-group">
+                    <label>Address</label>
+                    <input type="text" class="form-control" id="address" name="address" t-attf-value="#{d.address if d else ''}" placeholder="Enter Your Address" />
+                </div>
+                <div class="form-group">
+                    <label>Contact</label>
+                    <input type="text" class="form-control" id="number" name="contact" t-attf-value="#{d.contact if d else ''}" placeholder="Enter Your Contact No." />
+                </div>
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" class="form-control" id="email" name="email" t-attf-value="#{d.email if d else ''}" placeholder="Enter Your Email" />
+                </div>
+                <input type="submit" class="btn btn-primary" t-attf-value="#{'Update' if d else 'Create'}" />
+            </form>
+        </t>
+    </template>
+</odoo>
